--- a/wj-markdown-editor-web/src/assets/style/preview-theme/preview-theme-contract.scss
+++ b/wj-markdown-editor-web/src/assets/style/preview-theme/preview-theme-contract.scss
@@ -163,9 +163,6 @@
   --wj-preview-code-toolbar-background-color: var(--wj-preview-background-color-transparent);
   --wj-preview-code-toolbar-opacity: 0.65;
   --wj-preview-code-toolbar-hover-opacity: 1;
-  --wj-preview-code-toolbar-copy-display: var(--wj-preview-display-none);
-  --wj-preview-code-toolbar-copy-hover-display: var(--wj-preview-display-block);
-  --wj-preview-code-toolbar-lang-hover-display: var(--wj-preview-display-none);
   --wj-preview-mermaid-padding: 1rem;
   --wj-preview-mermaid-background-color: var(--wj-preview-code-block-background-color);
   --wj-preview-mermaid-border-radius: 8px;
